# statistic

defects/: .gitignore  Makefile  README.md  deploy.sh  dev.env  docker-compose.dev.yaml  pyproject.toml  test.env
defects/alembic/: env.py
defects/alembic/versions/: 7f5d3c208bc1_.py
defects/app/: main.py
defects/app/crud/: __init__.py  base.py  string_defect_types.py  string_defects.py  string_defects_history.py  tower_defect_types.py  tower_defects.py  tower_defects_history.py  track_defect_types.py  track_defects.py  wire_defect_types.py  wire_defects.py  wire_defects_history.py
defects/app/exceptions/: common.py
defects/app/models/: __init__.py  base_uuid.py  string_defect_types.py  string_defects.py  string_defects_history.py  tower_defect_types.py  tower_defects.py  tower_defects_history.py  track_defect_types.py  track_defects.py  wire_defect_types.py  wire_defects.py  wire_defects_history.py
defects/app/schemas/: response_schema.py  string_defect_types.py  string_defects.py  string_defects_history.py  tower_defect_types.py  tower_defects.py  tower_defects_history.py  track_defect_types.py  track_defects.py  wire_defect_types.py  wire_defects.py  wire_defects_history.py
defects/app/utils/: partial.py  uuid6.py
defects/docs/: defects-docs.tree  writerside.cfg
defects/docs/api/: api.json
defects/docs/topics/: starter-topic.md
defects/kubernetes/: persistent-volume-claim.yaml  persistent-volume.yaml
defects/kubernetes/app/: app-deployment.yaml  app-secret.yaml  app-service.yaml
defects/kubernetes/database/: db-deployment.yaml  db-secret.yaml  db-service.yaml
defects/tests/terst_request/: test_string_defect_types.http
projects/: .gitignore  Dockerfile  README.md  dev.env  docker-compose.yaml  init_base_data.py  init_test_data.py  openapi.json  prod.env  pyproject.toml
projects/alembic/: env.py
projects/alembic/versions/: 6147cdd334cf_init.py  927d8d8a1ee8_init.py
projects/app/: main.py
projects/app/api/: default_router.py
projects/app/crud/: __init__.py  base.py  object_status.py  project.py  project_status.py  span.py  subproject.py  tower.py  work_type.py
projects/app/database/: base_data.py  init.py  session.py
projects/app/models/: __init__.py  base_uuid.py  project.py  span.py  status.py  subproject.py  tower.py  work_type.py
projects/app/schemas/: object_status_schema.py  project_schema.py  project_status_schema.py  response_schema.py  span_schema.py  subproject_schema.py  tower_schema.py  work_type_schema.py
projects/app/utils/: partial.py
statistics/: Dockerfile  Makefile  dev.env  docker-compose.local.yaml  init_test_data.py  prometheus.yml  pyproject.toml
statistics/Writerside/: a.tree
statistics/Writerside/topics/: api-topic.md
statistics/alembic/: env.py
statistics/alembic/versions/: c2982bb14991_.py
statistics/app/: main.py
statistics/app/crud/: __init__.py  base.py  defects.py  object.py  progress.py  project.py  subproject.py  time.py
statistics/app/database/: session.py  test_data.py
statistics/app/models/: __init__.py  base_entity_model.py  defects.py  objects.py  progress.py  projects.py  subprojects.py  times.py
statistics/app/schemas/: defect_schema.py  object_schema.py  progress_schema.py  project_schema.py  response_schema.py  subproject_schema.py  time_schema.py
statistics/grafana_data/: grafana.db
statistics/k8s/app/: app-deployment.yaml  app-secret.yaml  app-service.yaml
statistics/k8s/database/: db-deployment.yaml  db-secret.yaml  db-service.yaml
statistics/tests/: conftest.py
(+53 files in other folders)
