[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Георгий Симаков <yolo73104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
asyncpg = "^0.27.0"
sqlmodel = "^0.0.8"
sqlalchemy = "1.4.41"
fastapi-async-sqlalchemy = "0.3.12"
psycopg2-binary = "^2.9.6"
loguru = "^0.7.0"
fastapi-pagination = "^0.12.4"
fastapi-limiter = "^0.1.5"
uuid7 = "^0.1.0"
prometheus-fastapi-instrumentator = "^6.1.0"
aio-pika = "^9.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
