[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Danil  Emurashin <emurashin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
asyncpg = "^0.27.0"
sqlmodel = "^0.0.8"
sqlalchemy = "1.4.41"
fastapi-async-sqlalchemy = "0.3.12"
psycopg2-binary = "^2.9.6"
loguru = "^0.7.0"
fastapi-pagination = "^0.12.4"
fastapi-limiter = "^0.1.5"
uuid7 = "^0.1.0"
sqlalchemy-utils = "^0.41.1"
cryptography = "^41.0.3"
httpx = "^0.25.0"
aio-pika = "^9.3.0"
prometheus-fastapi-instrumentator = "^6.1.0"
ruff = "^0.1.7"
pytest = "^7.4.3"
setuptools = "^69.0.2"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
show-fixes = true
src = ["app"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]


[tool.ruff.per-file-ignores]
"app/models/projects.py" = ["F821"]
"app/models/subprojects.py" = ["F821"]
"app/models/objects.py" = ["F821"]
"app/models/defects.py" = ["F821"]
"app/models/times.py" = ["F821"]
"app/models/progress.py" = ["F821"]
"app/models/__init__.py" = ["F401"]
"app/crud/__init__.py" = ["F401"]


[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]